syntax = "proto3";

package ekube.workspace.v1;
option go_package = "ekube/api/pb/workspace/v1;workspace";

import "ekube/pb/meta/meta.proto";

// Workspace 企业空间相关信息
message Workspace {
  // 元信息
  // @gotags: bson:",inline" json:"meta"
  meta.Meta meta = 1;
  // 基础信息
  // @gotags: json:"spec" bson:",inline"
  CreateWorkspaceRequest spec = 2;
}

message CreateWorkspaceRequest {
  // 企业空间名称
  // @gotags: json:"name" bson:"name"
  string name = 1;
  // 空间管理员
  // @gotags: json:"owner" bson:"owner"
  string owner = 2;
  // 空间描述信息
  // @gotags: json:"cluster_id" bson:"cluster_id"
  repeated string cluster_id = 3;
  // 空间描述信息
  // @gotags: json:"description" bson:"description"
  string description = 4;
}

// WorkspaceSet
message WorkspaceSet {
  // 分页时，返回总数量
  // @gotags: json:"total"
  int64 total = 1;
  // 一页的数据
  // @gotags: json:"items"
  repeated Workspace items = 2;
}